--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -117,6 +117,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <rerunFailingTestsCount>3</rerunFailingTestsCount>
                     <skip>false</skip>
                 </configuration>
             </plugin>
