Support Manifest Environment Integers
Previously we assumed that the value of any environment variable would be a string. This
assumption was incorrect, so this commit adds support for integers as well.

[resolves #842]

--- a/cloudfoundry-operations/src/test/resources/fixtures/manifest-alpha.yml
+++ b/cloudfoundry-operations/src/test/resources/fixtures/manifest-alpha.yml
@@ -46,7 +46,7 @@ applications:
   stack: alpha-stack
   timeout: -1
   env:
-    ALPHA_KEY_1: alpha-value-1
+    ALPHA_KEY_1: 1
     ALPHA_KEY_2: alpha-value-2
   services:
   - alpha-instance-1
