--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,7 @@
                         </goals>
                         <configuration>
                             <publisher>
-                                <contextUrl>https://repo.spring.io</contextUrl>
+                                <contextUrl>{{ARTIFACTORY_URL|"https://repo.spring.io"}}</contextUrl>
                                 <username>{{ARTIFACTORY_USERNAME}}</username>
                                 <password>{{ARTIFACTORY_PASSWORD}}</password>
                                 <repoKey>{{ARTIFACTORY_REPO_KEY|"libs-release-local"}}</repoKey>
